--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="variables.js"></script>
     <script src="vertex.js"></script>
     <script src="edge.js"></script>
+    <script src="cursormanager.js"></script>
     <script src="gamestatus.js"></script>
     <script src="game.js"></script>
 </body>
