--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>H</title>
+    <title>Project Hamiltonian</title>
     <style>
         * {padding: 0; margin: 0; background: #000;}
         canvas{background:#014; display:block; margin:0 auto;}
