soundmanaging and status

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     </style>
 </head>
 <body>
+    <!-- <embed src='assets/bgsound.mp3' hidden='true' loop=10000> -->
     <canvas id="maincanvas" width="800" height="600"></canvas>
     <script src="variables.js"></script>
+    <script src="soundmanager.js"></script>
     <script src="vertex.js"></script>
     <script src="edge.js"></script>
     <script src="gamestatus.js"></script>
