tower information moved (IMPORTANT)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <canvas id="maincanvas" width="800" height="600"></canvas>
     <script src="variables.js"></script>
     <script src="soundmanager.js"></script>
+    <script src="ani_timer.js"></script>
     <script src="vertex.js"></script>
     <script src="edge.js"></script>
     <script src="gamestatus.js"></script>
