--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="ani_timer.js"></script>
     <script src="vertex.js"></script>
     <script src="edge.js"></script>
+    <script src="path.js"></script>
     <script src="gamestatus.js"></script>
     <script src="cursormanager.js"></script>
     <script src="game.js"></script>
