--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="vertex.js"></script>
     <script src="edge.js"></script>
     <script src="path.js"></script>
+    <script src="command.js"></script>
     <script src="gamestatus.js"></script>
     <script src="cursormanager.js"></script>
     <script src="game.js"></script>
