D phase Game over

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="variables.js"></script>
     <script src="soundmanager.js"></script>
     <script src="ani_timer.js"></script>
+    <script src="util.js"></script>
     <script src="vertex.js"></script>
     <script src="edge.js"></script>
     <script src="path.js"></script>
